# docs/swagger.json
@@ -5,6 +5,17 @@
     },
     "paths": {
         "/v1/services": {
+            "get": {
+                "summary": "Get all services",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
             "post": {
                 "summary": "Create a service",
                 "parameters": [
@@ -28,11 +39,36 @@
                     "404": {
                         "description": "Not Found"
                     },
+                    "409": {
+                        "description": "Conflict"
+                    },
                     "422": {
                         "description": "Unprocessable Entity"
                     },
                     "500": {
                         "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/v1/services/{id}": {
+            "get": {
+                "summary": "Get a service by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Service ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
